--- a/app/styles/_flags/isl.scss
+++ b/app/styles/_flags/isl.scss
@@ -1,21 +1,22 @@
 // Iceland
 // http://www.crwflags.com/fotw/flags/is.html
 // http://commons.wikimedia.org/wiki/File:Flag_of_Iceland_(with_dimensions).svg
-$isl-bg: #003897;
-$isl-border-color: #FFF;
-$isl-inner-color: #D72828;
-$isl-cross-width: 4 * $w25;
-$isl-inner-width: 2 * $w25;
-$isl-cross-offset: 7 * $w25;
 
 @mixin flag-isl() {
   @include ratio(18 / 25);
+  $bg: #003897;
+  $border-color: #FFF;
+  $inner-color: #D72828;
+  $cross-width: 4 * $w25;
+  $inner-width: 2 * $w25;
+  $cross-offset: 7 * $w25;
+
   @include nordic-cross-border(
-    $isl-bg,
-    $isl-border-color,
-    $isl-inner-color,
-    $isl-cross-width,
-    $isl-inner-width,
-    $isl-cross-offset
+    $bg,
+    $border-color,
+    $inner-color,
+    $cross-width,
+    $inner-width,
+    $cross-offset
   );
 };
