--- a/app/styles/_flags/pol.scss
+++ b/app/styles/_flags/pol.scss
@@ -1,5 +1,13 @@
 // Poland
 // http://www.crwflags.com/fotw/flags/pl.html
+// https://en.wikipedia.org/wiki/Flag_of_Poland
+// https://en.wikipedia.org/wiki/File:Flag_of_Poland.svg
+//
+// Note: I used the red from the SVG from Wikipedia
 @mixin flag-pol() {
-  @include ratio(2 / 3);
+  @include ratio(5 / 8);
+  $top: #dc143c;
+  $bottom: #FFF;
+
+  @include two-lines($top, $bottom);
 };
