--- a/app/styles/_flags/idn.scss
+++ b/app/styles/_flags/idn.scss
@@ -1,5 +1,14 @@
 // Indonesia
 // http://www.crwflags.com/fotw/flags/id.html
+// https://en.wikipedia.org/wiki/Flag_of_Indonesia
+// https://commons.wikimedia.org/wiki/File:Flag_of_Indonesia.svg
+//
+// Note: Except for the ratio, this is the exact same flag as Monaco
+// Note: I used the color used in the SVG from the Wikipedia
 @mixin flag-idn() {
   @include ratio(2 / 3);
+  $top: #CE1126;
+  $bottom: #FFF;
+
+  @include two-lines($top, $bottom);
 };
