Add all flags with three horizontal lines

--- a/app/styles/_flags/arm.scss
+++ b/app/styles/_flags/arm.scss
@@ -1,5 +1,10 @@
 // Armenia
 // http://www.crwflags.com/fotw/flags/am.html
 @mixin flag-arm() {
-  @include ratio(2 / 3);
+  @include ratio(1 / 2);
+  $top: #D90012;
+  $center: #0033A0;
+  $bottom: #F2A800;
+
+  @include three-lines($top, $center, $bottom);
 };
