--- a/app/styles/_flags/est.scss
+++ b/app/styles/_flags/est.scss
@@ -1,5 +1,11 @@
 // Estonia
 // http://www.crwflags.com/fotw/flags/ee.html
+// https://en.wikipedia.org/wiki/Flag_of_Estonia
 @mixin flag-est() {
-  @include ratio(2 / 3);
+  @include ratio(7 / 11);
+  $top: #1291FF;
+  $center: #000;
+  $bottom: #FFF;
+
+  @include three-lines($top, $center, $bottom);
 };
