--- a/app/styles/_flags/gab.scss
+++ b/app/styles/_flags/gab.scss
@@ -1,5 +1,14 @@
 // Gabon
 // http://www.crwflags.com/fotw/flags/ga.html
+// https://en.wikipedia.org/wiki/Flag_of_Gabon
+// https://upload.wikimedia.org/wikipedia/commons/0/04/Flag_of_Gabon.svg
+//
+// Note: I used the colors from the SVG from Wikipedia
 @mixin flag-gab() {
-  @include ratio(2 / 3);
+  @include ratio(3 / 4);
+  $top: #009e60;
+  $center: #fcd116;
+  $bottom: #3a75c4;
+
+  @include three-lines($top, $center, $bottom);
 };
