--- a/app/styles/_flags/nld.scss
+++ b/app/styles/_flags/nld.scss
@@ -1,5 +1,11 @@
 // Netherlands
 // http://www.crwflags.com/fotw/flags/nl.html
+// https://en.wikipedia.org/wiki/Flag_of_the_Netherlands
 @mixin flag-nld() {
   @include ratio(2 / 3);
+  $top: #AE1C28;
+  $center: #FFF;
+  $bottom: #21468B;
+
+  @include three-lines($top, $center, $bottom);
 };
