--- a/app/styles/_flags/rus.scss
+++ b/app/styles/_flags/rus.scss
@@ -1,5 +1,14 @@
 // Russian Federation
 // http://www.crwflags.com/fotw/flags/ru.html
+// https://en.wikipedia.org/wiki/Flag_of_Russia
+// https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg
+//
+// Note: I used the colors from the Wikipedia SVG
 @mixin flag-rus() {
   @include ratio(2 / 3);
+  $top: #FFF;
+  $center: #0039a6;
+  $bottom: #d52b1e;
+
+  @include three-lines($top, $center, $bottom);
 };
