--- a/app/styles/_flags/civ.scss
+++ b/app/styles/_flags/civ.scss
@@ -1,5 +1,11 @@
 // Côte d'Ivoire
 // http://www.crwflags.com/fotw/flags/ci.html
+// https://en.wikipedia.org/wiki/Flag_of_Ivory_Coast
 @mixin flag-civ() {
   @include ratio(2 / 3);
+  $left: #F77F00;
+  $center: #FFF;
+  $right: #009E60;
+
+  @include three-columns($left, $center, $right);
 };
