--- a/app/styles/_flags/gmb.scss
+++ b/app/styles/_flags/gmb.scss
@@ -2,4 +2,23 @@
 // http://www.crwflags.com/fotw/flags/gm.html
 @mixin flag-gmb() {
   @include ratio(2 / 3);
+  $top-color: #EF3340;
+  $top-height: 6 * $h18;
+  $center-color: #003DA5;
+  $center-height: 4 * $h18;
+  $bottom-color: #009639;
+  $bottom-height: 6 * $h18;
+  $border-color: #FFF;
+  $border-height: $h18;
+
+  @include lines($top-color,
+                 $top-height,
+                 $border-color,
+                 $border-height,
+                 $center-color,
+                 $center-height,
+                 $border-color,
+                 $border-height,
+                 $bottom-color,
+                 $bottom-height);
 };
