--- a/app/styles/_flags/irl.scss
+++ b/app/styles/_flags/irl.scss
@@ -1,5 +1,11 @@
 // Ireland
 // http://www.crwflags.com/fotw/flags/ie.html
+// https://en.wikipedia.org/wiki/Flag_of_Ireland
 @mixin flag-irl() {
   @include ratio(2 / 3);
+  $left: #009B48;
+  $center: #FFF;
+  $right: #FF7900;
+
+  @include three-columns($left, $center, $right);
 };
