--- a/app/styles/_flags/lva.scss
+++ b/app/styles/_flags/lva.scss
@@ -1,5 +1,19 @@
 // Latvia
 // http://www.crwflags.com/fotw/flags/lv.html
+// https://en.wikipedia.org/wiki/Flag_of_Latvia
 @mixin flag-lva() {
-  @include ratio(2 / 3);
+  @include ratio(1 / 2);
+  $top-color: #9E1B34;
+  $top-height: 2 * $h5;
+  $center-color: #FFF;
+  $center-height: $h5;
+  $bottom-color: #9E1B34;
+  $bottom-height: 2 * $h5;
+
+  @include lines($top-color,
+                 $top-height,
+                 $center-color,
+                 $center-height,
+                 $bottom-color,
+                 $bottom-height);
 };
