--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,7 @@
 @import '_helpers/stripes';
 @import '_helpers/lines';
 @import '_helpers/columns';
+@import '_helpers/symbols';
 
 // Flag specific mixins
 @import '_helpers/nordic_cross';
