--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -34,6 +34,7 @@
   $h18:$height/18 !global;
   $h20:$height/20 !global;
   $h24:$height/24 !global;
+  $h27:$height/27 !global;
   $h28:$height/28 !global;
   $h30:$height/30 !global;
   $h34:$height/34 !global;
