--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -38,6 +38,7 @@
   $h28:$height/28 !global;
   $h30:$height/30 !global;
   $h34:$height/34 !global;
+  $h36:$height/36 !global;
 
   $w2:$width/2 !global;
   $w3:$width/3 !global;
