--- a/app/styles/_flags/hnd.scss
+++ b/app/styles/_flags/hnd.scss
@@ -15,9 +15,9 @@
 
   @include three-lines($top, $center, $bottom);
   &:before {
-    @include star($star, $star-size);
-    top: $top-offset-top;
-    left: $top-offset-left;
+    @include centered-star($star, $star-size);
+    // top: $top-offset-top;
+    // left: $top-offset-left;
     text-shadow:(12 * $unit) (3 * $unit) 0px $star,
                 (12 * $unit) (-3 * $unit) 0px $star,
                 (-12 * $unit) (3 * $unit) 0px $star,
