--- a/app/styles/_flags/som.scss
+++ b/app/styles/_flags/som.scss
@@ -3,13 +3,13 @@
 // https://commons.wikimedia.org/wiki/File:Flag_of_Somalia_(construction).jpg
 @mixin flag-som() {
   @include ratio(2 / 3);
+  $unit: $h12;
   $bg: #4189DD;
   $star: #FFF;
-  $star-size: 13 * $h27;
+  $star-size: 4 * $unit;
 
   background-color: $bg;
   &:before {
-    @include centered-star($star);
-    font-size: 13 * $h27;
+    @include centered-star($star, $star-size);
   }
 };
