--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -37,6 +37,7 @@
   $h27:$height/27 !global;
   $h28:$height/28 !global;
   $h30:$height/30 !global;
+  $h32:$height/32 !global;
   $h34:$height/34 !global;
   $h36:$height/36 !global;
 
